tests/suite/projects/fail/generated/missing_import_20/main.ny
//~ ERROR import not found
import "lib/missing20.ny"

fn main() {
    print(0)
}
